# termrec

./: .cirrus.yml  .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  ac_check_win32.m4  ac_comp_spec.m4  ac_decl_or_zero.m4  ac_shipped_lib.m4  acinclude.m4  arch.c  arch.h  asc.c  autogen  autogen.sh  baudrate.c  charsets.h  compress.c  config.h.in  configure  configure.ac  draw.c  draw.h  dumbplay.c  export.h  formats.c  formats.h  get_version  libpng.lib  logproxy.c  logproxy.rc  (+43 more)
cat/: Makefile.am  termcat.c
common/: Makefile.am  args.c  common.h  name_out.c  open_out.c  rec_args.c  rec_args.h
debian/: .gitignore  changelog  control  copyright  libtty-dev.install  libtty1.symbols  libtty1t64.lintian-overrides  libtty1t64.symbols  not-installed  rules  termrec.install  watch
debian/upstream/: metadata
doc/: Makefile.am  libtty.pod  libttyrec.pod  proxyrec.pod  termcat.pod  termplay.pod  termrec.pod  termtime.pod  vt100.pod
libstream/: Makefile.am  compress.c  compress.h  prefix.c  stream.c  stream.h  url_curl.c  url_file.c  url_tcp.c  url_telnet.c  url_termcast.c  url_unix.c
libtty/: Makefile.am  asciicast.c  charsets.c  charsets.h  colors.c  dosrecorder.c  export.h  files.c  files.h  formats.c  formats.h  stream.c  stream.h  timeline.c  timeline.h  tty.c  tty.h  ttyrec.h  utils.c  utils.h  vt100.c  vt100.h  vtredir.c  wcwidth.c  wcwidth.h
m4/: ac_check_win32.m4  ac_comp_spec.m4  ac_shipped_lib.m4  ac_zstd.m4  ax_create_stdint_h.m4  ax_lib_socket_nsl.m4
play/: Makefile.am  player.c  player.h  termplay.c
proxy/: Makefile.am  proxy.c
rec/: Makefile.am  pty.c  pty.h  termrec.c
sys/: Makefile.am  asprintf.c  compat.h  debuglog.c  error.h  is_utf8.c  threads.h  ttysize.h  utils.h
sys/unix/: threads.h  tos.c  ttysize.c  utils.c  uutils.h
sys/win32/: compat.c  conssize.c  debuglog.c  net.c  net.h  threads.h  winutils.c  winutils.h
tests/: .gitignore  Makefile.am  Makefile.in  loadsave.c  rec.c  seeks.c  tarith.c  testsuite.at  unescape  vt.c  vtgen.c  vtmir.c
tests/misc.out/: splitutf.cast
tests/rec.in/: asciicast-escapes.cast  asciicast-v2.cast  splitutf.nh
tests/rec.out/: asciicast-escapes  asciicast-v1  asciicast-v2  splitutf
tests/vt.in/: 1  badchar  badscroll  cjk-comb  cjk1  cjk2  combining  csi_@  csi_E_F  csi_P  osc  t416_overflow  title  unicode  vt100graph
tests/vt.out/: 1  badchar  badscroll  cjk-comb  cjk1  cjk2  combining  csi_@  csi_E_F  csi_P  longwrite  osc  t416_overflow  title  unicode  vt100graph
time/: Makefile.am  termtime.c
tmp/: .gitignore  Makefile.am  conv.c  vtest.c  vtredir.c
ugly/: Makefile.am  name_in.c  name_out.c  name_out.h
unix/: Makefile.am  pty.c  stream.c  threads.h  ttyr.c  utils.c
win32/: Makefile.am  draw.c  draw.h  net.c  net.h  stream.c  term.c  termplay.rc  termrec.iss  threads.h  winrec.c  winutils.h
win32/icons/: Makefile.am  termplay.manifest  termplay.rc  termrec.rc
win32/lib/: .gitignore  README
